feat(login/profile/location): Novas implementações referente ao login, perfil e localização
Atualização de perfil, adição de transitions em lista de locais e avaliações, criação do fluxo de avaliação de um local e muitos outros ajustes de estilização

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "event-emitter-lite": "^1.6.3",
     "file-loader": "^6.2.0",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.6",
     "pug": "^3.0.0",
     "push.js": "^1.0.12",
