feat(location/favorites): Exibição de lista de lugares favoritos por usuário
Customização dos componentes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
     "importHelpers": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitReturns": false,
+    "removeComments": true,
+    "strictPropertyInitialization": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
