--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "bootstrap-vue": "^2.21.1",
     "core-js": "^3.6.5",
     "event-emitter-lite": "^1.6.3",
+    "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "moment": "^2.29.1",
     "nodemon": "^2.0.6",
     "pug": "^3.0.0",
     "push.js": "^1.0.12",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-cli-plugin-pug": "^2.0.0",
